<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/item_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/svg_ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_skin"
            android:visible="false"
            android:icon="@drawable/svg_ic_skin"
            android:title="@string/skin" />

        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/svg_ic_collect"
            android:title="@string/collect" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/svg_ic_cache"
            android:title="@string/download" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/svg_ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/svg_ic_about"
            android:title="@string/about" />

    </group>

    <item
        android:id="@+id/nav_out"
        android:checked="true"
        android:icon="@drawable/svg_ic_out"
        android:title="@string/out" />

</menu>
