<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory android:title="主题设置">

        <SwitchPreference
            android:checked="true"
            android:defaultValue="false"
            android:key="@string/key_nightMode"
            android:order="0"
            android:title="夜间模式" />

        <Preference
            android:key="@string/key_theme_primary"
            android:order="1"
            android:title="主色" />

        <Preference
            android:key="@string/key_theme_accent"
            android:order="2"
            android:title="配色" />

    </PreferenceCategory>

    <PreferenceCategory android:title="其他">
        <Preference
            android:key="@string/key_clearCache"
            android:order="3"
            android:title="清除缓存" />

        <Preference
            android:key="@string/key_checkUpdates"
            android:order="4"
            android:title="检查更新" />
    </PreferenceCategory>


</PreferenceScreen>