<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/main_cartoon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.sir.app.retrofit.view.widget.floating.FloatingActionsMenu
        android:id="@+id/actions_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        app:fab_addButtonColorNormal="?attr/colorPrimary"
        app:fab_addButtonColorPressed="?attr/colorPrimaryDark"
        app:fab_addButtonSize="mini">


        <com.sir.app.retrofit.view.widget.floating.FloatingActionButton
            android:id="@+id/action_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@mipmap/ic_menu_essence"
            app:fab_size="mini"
            app:fab_title="@string/choiceness" />


        <com.sir.app.retrofit.view.widget.floating.FloatingActionButton
            android:id="@+id/action_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@mipmap/ic_menu_domestic"
            app:fab_size="mini"
            app:fab_title="@string/domestic" />

        <com.sir.app.retrofit.view.widget.floating.FloatingActionButton
            android:id="@+id/action_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@mipmap/ic_menu_blood"
            android:visibility="gone"
            app:fab_size="mini"
            app:fab_title="@string/blood" />

    </com.sir.app.retrofit.view.widget.floating.FloatingActionsMenu>
</android.support.design.widget.CoordinatorLayout>