<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.movie.activity.MovieDetailsActivity"
    tools:showIn="@layout/activity_movie_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_grade" />

        <LinearLayout
            android:id="@+id/detail_rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/detail_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srb_drawBorderEnabled="false"
                app:srb_fillColor="@color/colorAccent"
                app:srb_isIndicator="true"
                app:srb_starBackgroundColor="@android:color/darker_gray"
                app:srb_starSize="25dp"
                app:srb_starsSeparation="4dp" />

            <TextView
                android:id="@+id/detail_rating_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/detail_release_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_release_info" />

        <TextView
            android:id="@+id/detail_release_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            tools:text="xxx" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/movie_type" />

        <TextView
            android:id="@+id/detail_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            tools:text="爱情，动作" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:text="@string/movie_director" />

        <TextView
            android:id="@+id/detail_director_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            tools:text="李安" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/movie_starring" />

        <TextView
            android:id="@+id/detail_starring_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            tools:text="xxx, xxx" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/movie_story_brief" />

        <TextView
            android:id="@+id/detail_story_brief_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:text="xxx, xxx" />

        <com.sir.app.retrofit.view.widget.WrapLayout
            android:id="@+id/movie_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:wlyHorizontalSpacing="20dp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
